--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
     color: white;
     font-size: 16px;
     box-shadow: 0 5px 10px 1px rgba(0, 0, 0, 0.2) ;
-
+    cursor: pointer;
 }
 
 .amount {
